# scheduler

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  schedule.md
src/kids_scheduler/: api.py  main.py  start.py
src/kids_scheduler/crews/activity_planner/: activity_planner.py
src/kids_scheduler/crews/activity_planner/config/: agents.yaml  tasks.yaml
