[project]
name = "kids_scheduler"
version = "0.1.0"
description = "kids-scheduler using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
]

[project.scripts]
kickoff = "kids_scheduler.main:kickoff"
run_crew = "kids_scheduler.main:kickoff"
plot = "kids_scheduler.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
